@@ -7,7 +7,7 @@ A young man is here smoking a cigarette.
 few men who did not sign up for military service.    
 ~
 2248 0 0 0 0 0 0 0 900 E
-34 9 -10 1d1+340 5d5+5
+34 9 -10 6d6+340 5d5+5
 340 115600
 8 8 1
 Str: 18
