@@ -299,19 +299,28 @@ void medit_save_internally(struct descriptor_data *d)
    Display positions. (sitting, standing, etc) */
 static void medit_disp_positions(struct descriptor_data *d)
 {
+  int i;
+
   get_char_colors(d->character);
   clear_screen(d);
-  column_list(d->character, 0, position_types, NUM_POSITIONS, TRUE);
+
+  for (i = 0; *position_types[i] != '\n'; i++) {
+    write_to_output(d, "%s%2d%s) %s\r\n", grn, i, nrm, position_types[i]);
+  }
   write_to_output(d, "Enter position number : ");
 }
 
 /* Display the gender of the mobile. */
 static void medit_disp_sex(struct descriptor_data *d)
 {
+  int i;
+
   get_char_colors(d->character);
   clear_screen(d);
-  column_list(d->character, 0, genders, NUM_GENDERS, TRUE);
-  write_to_output(d, "Enter gender number : ");
+
+  for (i = 0; i < NUM_GENDERS; i++) {
+    write_to_output(d, "%s%2d%s) %s\r\n", grn, i, nrm, genders[i]);
+  }
 }
 
 /* Display attack types menu. */
@@ -630,6 +639,7 @@ void medit_parse(struct descriptor_data *d, char *arg)
     case '2':  /* Autoroll stats */
       medit_autoroll_stats(d);
       medit_disp_stats_menu(d);
+      OLC_VAL(d) = TRUE;
       return;
     case '3':
       OLC_MODE(d) = MEDIT_NUM_HP_DICE;
